# ASL

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.in  LICENSE  README.md  benchmarks.sh  generate_plots.sh  plot_all.sh  run_perf_measurements.sh
doc/: TODO.md  comparisons_and_plots.md  instructions.md  meeting1.md  optimizations_overview.md
helper_scripts/: generate_clusters.py  plot_clusters.py  plot_condensed_tree.py  plot_performance.py  plot_performance_alt.py  plot_performance_dims.py  plot_roofline.py  requirements.txt  turbo_boost.sh
include/: benchmark_util.h  cluster.h  clustering.h  config.h.in  distance.h  hdbscan.h  prim.h  quickselect.h  tsc_x86.h  union_find.h  utils.h
measurements/20210605_000445/: advprim.csv  advprim_distvec_quickvec_dims16.csv  advprim_distvec_quickvec_dims4.csv  advprim_distvec_quickvec_dims64.csv  advprim_distvec_quickvec_dims8.csv  distance_matrix_blocked_100.csv  distance_matrix_blocked_20.csv  distance_matrix_blocked_80.csv  distance_matrix_triangular.csv  intel_no_vec.csv  intel_pext_partition.csv  quickselect_baseline.csv  reference_hdbscan.csv
measurements/20210605_112326/: clang_advprim_best.csv  clang_basic_best.csv  gcc_advprim_best.csv  gcc_basic_best.csv
measurements/alex/20210527_235341/: advprim.csv  advprim_distvec.csv  advprim_distvec_quickvec.csv  advprim_distvec_quickvec_primvec.csv  amd_lut_partition.csv  amd_no_vec.csv  amd_pext_partition.csv  basic.csv  basic_O3.csv  basic_distvec.csv  basic_distvec_quickvec.csv  basic_distvec_quickvec_primvec.csv  distance_matrix_basic.csv  distance_matrix_blocked.csv  distance_matrix_triangular.csv  intel_no_vec.csv  reference_hdbscan.csv
measurements/alex/20210603_002150/: advprim.csv  advprim_distvec.csv  advprim_distvec_quickvec.csv  advprim_distvec_quickvec_primvec.csv  amd_lut_partition.csv  amd_no_vec.csv  amd_pext_partition.csv  basic.csv  basic_O3.csv  basic_distvec.csv  basic_distvec_quickvec.csv  basic_distvec_quickvec_primvec.csv  reference_hdbscan.csv
measurements/alex/20210605_000814/: advprim.csv  advprim_distvec.csv  advprim_distvec_quickvec.csv  advprim_distvec_quickvec_dims128.csv  advprim_distvec_quickvec_dims16.csv  advprim_distvec_quickvec_dims2.csv  advprim_distvec_quickvec_dims256.csv  advprim_distvec_quickvec_dims32.csv  advprim_distvec_quickvec_dims4.csv  advprim_distvec_quickvec_dims64.csv  advprim_distvec_quickvec_dims8.csv  advprim_distvec_quickvec_primvec.csv  advprim_vec_blobs1.csv  advprim_vec_blobs2.csv  advprim_vec_blobs3.csv  advprim_vec_blobs4.csv  amd_lut_partition.csv  amd_no_vec.csv  basic.csv  basic_best_blobs1.csv  basic_best_blobs2.csv  basic_best_blobs3.csv  basic_best_blobs4.csv  basic_distvec.csv  basic_distvec_quickvec.csv  basic_distvec_quickvec_primvec.csv  bubbleselect.csv  clang_advprim_best.csv  clang_basic_best.csv  distance_matrix_basic.csv  distance_matrix_blocked_100.csv  distance_matrix_blocked_20.csv  distance_matrix_blocked_40.csv  distance_matrix_blocked_80.csv  distance_matrix_triangular.csv  quickselect_baseline.csv  quickselect_vectorized.csv  reference_hdbscan.csv
measurements/alex/20210621_232420/: advprim.csv  advprim_cg_N12_d20.out  advprim_cg_N12_d4.out  advprim_distvec.csv  advprim_distvec_quickvec.csv  advprim_distvec_quickvec_dims.csv  advprim_distvec_quickvec_dims128.csv  advprim_distvec_quickvec_dims16.csv  advprim_distvec_quickvec_dims2.csv  advprim_distvec_quickvec_dims256.csv  advprim_distvec_quickvec_dims32.csv  advprim_distvec_quickvec_dims4.csv  advprim_distvec_quickvec_dims64.csv  advprim_distvec_quickvec_dims8.csv  advprim_distvec_quickvec_dims_manhattan.csv  advprim_distvec_quickvec_dims_manhattan_spec.csv  advprim_distvec_quickvec_dims_spec.csv  advprim_distvec_quickvec_primvec.csv  advprim_vec_blobs1.csv  advprim_vec_blobs2.csv  advprim_vec_blobs3.csv  advprim_vec_blobs4.csv  amd_lut_partition.csv  amd_no_vec.csv  amd_pext_partition.csv  basic.csv  basic_best_blobs1.csv  basic_best_blobs2.csv  basic_best_blobs3.csv  basic_best_blobs4.csv  basic_cg_N12_d20.out  basic_cg_N12_d4.out  basic_distvec.csv  basic_distvec_quickvec.csv  basic_distvec_quickvec_primvec.csv  blocked_v_triang_cg_N12_d20.out  blocked_v_triang_cg_N12_d4.out  bubbleselect.csv  clang_advprim_best.csv  clang_basic_best.csv  (+56 more)
measurements/alex/20210623_235735/: advprim.csv  advprim_cg_N12_d64.out  advprim_distvec.csv  advprim_distvec_quickvec.csv  advprim_distvec_quickvec_dims.csv  advprim_distvec_quickvec_dims128.csv  advprim_distvec_quickvec_dims16.csv  advprim_distvec_quickvec_dims2.csv  advprim_distvec_quickvec_dims256.csv  advprim_distvec_quickvec_dims32.csv  advprim_distvec_quickvec_dims4.csv  advprim_distvec_quickvec_dims64.csv  advprim_distvec_quickvec_dims8.csv  advprim_distvec_quickvec_dims_manhattan.csv  advprim_distvec_quickvec_dims_manhattan_spec.csv  advprim_distvec_quickvec_dims_spec.csv  advprim_distvec_quickvec_primvec.csv  advprim_vec_blobs1.csv  advprim_vec_blobs2.csv  advprim_vec_blobs3.csv  advprim_vec_blobs4.csv  basic.csv  basic_best_blobs1.csv  basic_best_blobs2.csv  basic_best_blobs3.csv  basic_best_blobs4.csv  basic_cg_N12_d64.out  basic_distvec.csv  basic_distvec_quickvec.csv  basic_distvec_quickvec_primvec.csv  blocked_v_triang_cg_N12_d64.out  bubbleselect.csv  clang_advprim_autovec.csv  clang_advprim_best.csv  clang_basic_autovec.csv  clang_basic_best.csv  distance_matrix_basic.csv  distance_matrix_blocked_100.csv  distance_matrix_blocked_20.csv  distance_matrix_blocked_40.csv  (+59 more)
measurements/alex/20210624_095020/: advprim_cg_N12_d64.out  basic_cg_N12_d64.out  blocked_v_triang_cg_N12_d64.out  reference_cg_N12_d64.out
measurements/martin/20210528_012132/: advprim.csv  (+13 more)
references/hdbscan-cpp/: Makefile  README.md  main
src/: CMakeLists.txt  benchmark_main.cpp  benchmark_util.cpp  clustering.cpp  distance.cpp  distance_vectorized.cpp  hdbscan.cpp  hdbscan_basic.cpp  hdbscan_basic_blocked.cpp  hdbscan_basic_triangular.cpp  main.cpp  prim.cpp  prim_vectorized.cpp  quickselect.cpp  quickselect_vectorized.cpp  union_find.cpp  utils.cpp
test/: CMakeLists.txt  e2e_test.py  hdbscan_test.cpp
(+259 files in other folders)
